apps/seafile/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile-ingress
  namespace: seafile
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - seafile
  rules:
    - host: seafile
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seafile
                port:
                  number: 80
